<resources>
    <string name="app_name">Agenda ágil</string>
    <string name="backlog">Backlog</string>
    <string name="mostrar_dia">Mostrar Día</string>
    <string name="eventos">Eventos</string>
    <string name="title_activity_new_main">newMainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="historial">Historial</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="calendario">Mes</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="evento">Evento</string>
    <string name="tarea">Tarea</string>
    <string name="texto_de_prueba"> Using BottomNavigationView with an updated Material theme
        (Theme.MaterialComponents) will provide the correct updated Material styles to your
        BottomNavigationViews by default. If you need to use an updated BottomNavigationView
        and your application theme does not inherit from an updated Material theme, or if you’d like
        to use a variant style, you can apply one of the updated Material styles directly to your
        widget in XML: Using BottomNavigationView with an updated Material theme
        (Theme.MaterialComponents) will provide the correct updated Material styles to your
        BottomNavigationViews by default. If you need to use an updated BottomNavigationView
        and your application theme does not inherit from an updated Material theme, or if you’d like
        to use a variant style, you can apply one of the updated Material styles directly to your
        widget in XML: Using BottomNavigationView with an updated Material theme (Theme.MaterialComponents)
        will provide the correct updated Material styles to your BottomNavigationViews by default.
        If you need to use an updated BottomNavigationView and your application theme does not
        inherit from an updated Material theme, or if you’d like to use a variant style,
        you can apply one of the updated Material styles directly to your widget in XML:</string>
    <string name="shuffle">Shuffle</string>
    <string name="agrega_uno">¡Agregá uno!</string>
    <string name="no_tenes_eventos">No tenés eventos.</string>
    <string name="agrega_una">¡Agregá una!</string>
    <string name="no_tenes_tareas">No tenés tareas.</string>
    <string name="opciones">Opciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tarea_nombre">Nombre de la tarea</string>
    <string name="tarea_prioridad">Prioridad de la tarea:</string>
    <string name="crear_tarea_activity">Crear tarea</string>
    <string name="prioridad_maxima">Máxima</string>
    <string name="prioridad_media">Media</string>
    <string name="prioridad_baja">Baja</string>

</resources>
