<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/head_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:titleTextColor="@color/primaryTextColor"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:layout_alignParentLeft="true"
                    />
                <TextView
                    android:textStyle="normal"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="14 - 10 - 2018"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/textTitle"
                    />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            app:cardCornerRadius="15dp"
            android:paddingBottom="20dp"
            android:layout_marginBottom="-15dp"
            android:id="@+id/contenedor_fragmentos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="@id/barra_de_navegacion"
            app:layout_constraintTop_toTopOf="parent"
            />

        <android.support.design.widget.BottomNavigationView
            android:layout_marginBottom="-15dp"
            android:id="@+id/barra_de_navegacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/barra_de_navegacion" />
    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_crear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu_fab_label="Crear nuevo"
        android:paddingRight="8dp"
        android:paddingBottom="64dp"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@android:color/black"
        android:elevation="4dp"
        fab:fab_shadowColor="#29000000"
        fab:fab_shadowRadius="4dp"
        app:menu_buttonSpacing="0dp"
        app:menu_backgroundColor="#7d004ba0"
        >

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_tareas"
            android:src="@drawable/ic_filter_list_white_24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:fab_label="@string/tarea"
            app:fab_size="mini"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@android:color/black"
            fab:fab_shadowColor="#29000000"
            fab:fab_shadowRadius="4dp"
            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_eventos"
            android:src="@drawable/ic_assistant_photo_white_24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:fab_label="@string/evento"
            app:fab_size="mini"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@android:color/black"
            fab:fab_shadowColor="#29000000"
            fab:fab_shadowRadius="4dp"
            />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.constraint.ConstraintLayout>